<resources>
    <string name="app_name">Guess2</string>
    <string name="please_enter_a_number">Please enter a number</string>
    <string name="ok">ok</string>
    <string name="yes_you_got_it">Yes, you got it</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">Smaller</string>
    <string name="dialog_title">Message</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="replay_game">Replay game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
</resources>